--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -1,8 +1,10 @@
 {
   "store.home": {
     "blocks": [
+      "flex-layout.row#home__section--one",
       "rich-text#home__section__two",
-      "flex-layout.row#home__section--one"
+      "slider-layout#home__slider--children",
+      "list-context.image-list#home__slider--list"
     ]
   },
   "rich-text#home__section__two": {
@@ -11,6 +13,119 @@
       "textAlignment": "CENTER",
       "textPosition": "CENTER",
       "font": "t-heading-4"
+    }
+  },
+  "slider-layout#home__slider--children": {
+    "title": "mi primer slider",
+    "props": {
+      "label": "slider",
+      "itemsPerPage": {
+        "desktop": 1,
+        "tablet": 1,
+        "mobile": 1
+      },
+      "blockClass": "home__slider",
+      "showNavigationArrows": "always",
+      "showPaginationDots": "always",
+      "infinite": true,
+      "fullWidth": true,
+      "autoplay": {
+        "timeout": 3500,
+        "stopOnHover": true
+      }
+    },
+    "children": [
+      "flex-layout.row#home__slider--zero",
+      "image#home__slider--one",
+      "image#home__slider--two",
+      "image#home__slider--three",
+      "image#home__slider--four",
+      "image#home__slider--five"
+    ]
+  },
+  "image#home__slider--one": {
+    "props": {
+      "src": "assets/img/main-slide-1.png"
+    }
+  },
+  "image#home__slider--two": {
+    "props": {
+      "src": "assets/img/main-slide-2.png"
+    }
+  },
+  "image#home__slider--three": {
+    "props": {
+      "src": "assets/img/main-slide-3.png"
+    }
+  },
+  "image#home__slider--four": {
+    "props": {
+      "src": "assets/img/main-slide-4.png"
+    }
+  },
+  "image#home__slider--five": {
+    "props": {
+      "src": "assets/img/main-slide-5.png"
+    }
+  },
+  "flex-layout.row#home__slider--zero": {
+    "children": ["flex-layout.col#home__slider--zero"]
+  },
+  "flex-layout.col#home__slider--zero": {
+    "children": ["image#home__slider--one", "rich-text#test"]
+  },
+  "rich-text#test": {
+    "props": {
+      "text": "generic CTA"
+    }
+  },
+  "list-context.image-list#home__slider--list": {
+    "title": "mi lista de imagenes",
+    "children": ["slider-layout#home__slider--list"],
+    "props": {
+      "preload": true,
+      "images": [
+        {
+          "image": "assets/img/main-slide-1.png",
+          "description": "slide 1"
+        },
+        {
+          "image": "assets/img/main-slide-2.png",
+          "description": "slide 2"
+        },
+        {
+          "image": "assets/img/main-slide-3.png",
+          "description": "slide 3"
+        },
+        {
+          "image": "assets/img/main-slide-4.png",
+          "description": "slide 4"
+        },
+        {
+          "image": "assets/img/main-slide-5.png",
+          "description": "slide 5"
+        }
+      ]
+    }
+  },
+  "slider-layout#home__slider--list": {
+    "title": "mi segundo slider",
+    "props": {
+      "label": "slider 2",
+      "itemsPerPage": {
+        "desktop": 1,
+        "tablet": 1,
+        "mobile": 1
+      },
+      "blockClass": "home__slider",
+      "showNavigationArrows": "always",
+      "showPaginationDots": "always",
+      "infinite": true,
+      "fullWidth": true
+      // "autoplay": {
+      //   "timeout": 3500,
+      //   "stopOnHover": true
+      // }
     }
   }
 }
